# rd53event

./: .gitignore  CMakeLists.txt  README.MD  build.sh
inc/: RD53BEvent.h  RD53Decoder.h  RD53Event.h  utils.h
python/: CMakeLists.txt  __init__.py.in  __init_global.py.in  bindings.cc  pyproject.toml.in  setup.py.in
src/: Decoder.cpp  Event.cpp  Quartercore.cpp  RD53Decoder.cpp  RD53Event.cpp  TEPXEvent.cpp  utils.cpp
swig/: RD53.i  RD53BEvent.i  RD53Event.i  event.i  hitCoord.i  prints.i  streamVector.i
test/: test.cpp  test.py
